overview: Minimized window items not stacked properly.

Window items which are based on minimized windows have some issues.
The "App does not support split-screen" label does not show up, and
dragged windows are not always on top of the rest of the window items.

The current logic always stacks the window item widget on top of the
original window. But the original window is actually below the minimized
widget on z order, so the item widget ends up also being below. The
minimized widget needs to be stacked below, or the item widget needs to
be stacked above the minimized widget. This CL attempts the latter.

Also cache the command line flag for new overview ui, to reduce the
amount of calls.

Also center the "App does not support split-screen" label in the window
selector item minus the title bar.

Test: manual
Bug: 810461
Change-Id: I1bd10fe0d206b175112d33a359775c13a5b9e19e
Reviewed-on: https://chromium-review.googlesource.com/909301
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima (In Tokyo) <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536608}
Former-commit-id: 306c040b2263619e7efe15fa66226b0551525244